# email_newsletter

./: .env  .gitignore  Cargo.toml  Dockerfile  general.yml  spec.yaml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: configuration.yaml  health_check.rs  subscriptions.rs
tests/: domain.rs  health_check.rs
